# soulsrpg

./: README.md  main.py  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
assets/shaders/: default.frag  default.vert  default.vs
soulsrpg/: __init__.py  camera.py  components.py  ecs.py  listener.py  mesh.py  player.py  scene.py  scenes.py  shaders.py  soulsrpg.py  texture.py  transform.py  utils.py
tests/: listeners_test.py  simple_test.py
