[metadata]
name = soulsrpg
version = 0.0.0
author = p1ngu1n0 cdecompilador
license = MIT
license_file = LICENSE

[options]
packages = find:
py_modules = main
python_requires = >=3.10.0
tests_requires = 
	mypy==0.910
	mypy-extensions==0.4.3
	typing-extensions==3.10.0.2

[options.packages.find]
exclude =
	tests*

[options.entry_points]
console_scripts =
	soulsrpg = main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
